--- a/content/css/style.css
+++ b/content/css/style.css
@@ -619,7 +619,7 @@ section ul li{
   border-radius:20px;
   padding: 12px !important;
   min-height: 280px;min-width: 200px;
-  background: url('/content/images/loader.gif');
+  background: url('/content/images/loader_background.png');
   background-size: cover;	
 }
 .gallery .carowsel-items img{
